--- a/index.css
+++ b/index.css
@@ -124,11 +124,14 @@ a:hover {
 }
 
 .opal-awake:before {
-  background: white;
+  background: linear-gradient(to bottom right, rgb(255, 189, 65), rgb(255, 255, 41), rgb(90, 255, 255), rgb(255, 134, 154));
+  opacity: 0;
+  -webkit-transition: opacity .2s;
+  transition: opacity .2s;
 }
 
 .opal-awake:hover:before {
-  background: linear-gradient(to bottom right, rgb(255, 189, 65), rgb(255, 255, 41), rgb(90, 255, 255), rgb(255, 134, 154));
+  opacity: 1;
 }
 
 .opal-inner {
