--- a/opalescent.css
+++ b/opalescent.css
@@ -16,6 +16,11 @@
   border-radius: 5px;
   opacity: 1;
   margin-bottom: 20px;
+  text-align: center;
+}
+
+.opal:hover {
+  color: white;
 }
 
 .opal-header {
@@ -90,20 +95,16 @@ a {
   animation-timing-function: linear;
 }
 
-.opal-light {
+.opal-light,
+.opal-light:hover {
   color: rgb(24, 24, 24);
-}
-
-.opal-outline {
-  border-color: rgb(167, 167, 167);
-  border-style: solid;
 }
 
 .opal-rainbow:before {
   background: linear-gradient( to bottom right, rgba(255, 255, 0, 0.85) 10%, rgba(255, 0, 0, 0.75), rgba(255, 0, 0, 0.75), rgba(0, 255, 0, 0.75) 19%, rgba(0, 0, 255, 0.65) 40%, rgba(255, 0, 0, 0.65), rgba(255, 255, 0, 0.85) 80%), linear-gradient( to top right, rgba(255, 255, 0, 0.85) 10%, rgba(255, 0, 0, 0.75), rgba(0, 255, 0, 0.75) 25%, rgba(0, 0, 255, 0.65) 40%, rgba(255, 0, 0, 0.65), rgba(255, 255, 0, 0.85) 80%);
 }
 
-.opal-rainbow2:before {
+.opal-rainbow-soft:before {
   background: linear-gradient( to top right, rgb(255, 102, 0), rgba(255, 0, 0, 0.733), rgba(192, 26, 192, 0.984), rgba(50, 0, 205, 0.449), teal, green, rgba(0, 0, 255, 0.5)), linear-gradient(to bottom right, orange, rgba(0, 0, 255, 0.6), yellow);
 }
 
@@ -112,7 +113,8 @@ a {
 }
 
 .opal-dark:before {
-  background: linear-gradient( to bottom right, black, rgb(43, 0, 43), rgb(49, 49, 49), black);
+  /* background: linear-gradient( to bottom right, black, rgb(43, 0, 43), rgb(0, 5, 68), black); */
+  background: linear-gradient(to bottom right, black, rgb(56, 56, 56), rgba(1, 1, 1, 0.733), rgba(83, 83, 83, 0.438));
 }
 
 .opal-light:before {
@@ -120,23 +122,29 @@ a {
 }
 
 .opal-awake:before {
-  background: linear-gradient( to bottom right, rgb(255, 189, 65), rgb(255, 255, 41), rgb(90, 255, 255), rgb(255, 134, 154));
+  /* background: linear-gradient( to bottom right, rgb(255, 189, 65), rgb(255, 255, 41), rgb(90, 255, 255), rgb(255, 134, 154)); */
   opacity: 0;
   -webkit-transition: opacity 0.2s;
   transition: opacity 0.2s;
 }
 
-.opal-awake:hover:before {
-  opacity: 1;
+.opal-awake:hover {
+  border-color: transparent;
 }
 
-.opal-inner {
+.opal-awake:hover:before {
+  opacity: .9;
+}
+
+.opal-framed {
   margin: 2px;
   height: calc(100% - 4px);
   width: calc(100% - 4px);
   border-radius: 3px;
   background-color: #ffffff50;
   padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   -webkit-transition: background-color 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out;
 }
@@ -147,6 +155,9 @@ a {
   background-color: #ffffff50;
   -webkit-transition: background-color 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out;
+  padding-top: 7px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .opal:hover:before {
@@ -161,11 +172,11 @@ a {
 }
 
 .opal .opal-soften:hover {
-  background-color: transparent;
+  background-color: #ffffff2f;
 }
 
-.opal .opal-inner:hover {
-  background-color: transparent;
+.opal .opal-framed:hover {
+  background-color: #ffffff2f;
 }
 
 .opal-rainbow:hover:before {
@@ -185,6 +196,14 @@ a {
   -webkit-animation: success 1s infinite;
   animation: success 1s infinite;
   animation-direction: alternate;
+}
+
+.opal-outline {
+  border-color: rgb(167, 167, 167);
+  border-style: solid;
+  color: black;
+  -webkit-transition: border-color .3s;
+  transition: border-color .3s;
 }
 
 @keyframes pan {
@@ -232,16 +251,5 @@ a {
 @keyframes success {
   to {
     transform: rotate(60deg);
-  }
-}
-
-@keyframes toActive {
-  from {
-    background: green;
-    opacity: 0.5;
-  }
-  to {
-    background: linear-gradient(0deg, #0a8b0620 19%, #0bca0530 50%, #00ff0d9c), linear-gradient(90deg, black, green 80%, black 80%, green);
-    opacity: 1;
   }
 }
