--- a/index.css
+++ b/index.css
@@ -2,10 +2,6 @@
   font-family: "Catamaran", sans-serif;
 }
 
-.container {
-  margin-top: 20px;
-}
-
 .button-row {
   padding-top: 40px;
   padding-bottom: 10px;
@@ -13,17 +9,39 @@
 
 .container-fluid {
   padding: 0px !important;
-  position: relative !important;
 }
+
+.container {
+  /* padding-bottom: 50px; */
+}
+
+/* 
+.container-fluid .container {
+  margin-top: 15px !important;
+} */
 
 code {
   font-size: 20px !important;
-  text-align: center !important;
+  /* text-align: center !important; */
   display: inline-block;
   padding: 10px 30px 10px 30px;
   border: rgba(128, 128, 128, 0.411) 2px solid;
   border-radius: 5px;
-  margin: 30px;
+}
+
+code.block {
+  width: 300px;
+  height: 200px;
+}
+
+code.line {
+  width: 90%;
+  margin: 20px 0px 20px 0px;
+}
+
+code.inline {
+  padding: 0px 5px 0px 5px;
+  font-size: inherit;
 }
 
 .fill {
@@ -31,23 +49,32 @@ code {
   text-align: center;
 }
 
-.opal-header .container {
+.opal-header {
+  display: inline-block;
+  min-height: 200px !important;
+}
+
+.container {
   margin-top: 35px;
+}
+
+.container:last-child {
+  padding-bottom: 50px;
 }
 
 .opal-clear {
   width: 150px;
 }
 
-a {
+.opal-header a {
   color: #ffffffb0 !important;
   -webkit-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
 }
 
-a:hover {
+.opal-header a:hover {
   color: white !important;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 p {
@@ -60,8 +87,23 @@ p.clear-text {
   font-size: 16px;
 }
 
+h1 {
+  font-size: 70px !important;
+}
+
+/* .col-12 h1 {
+  font-size: 40px !important;
+  text-align: center;
+  padding-top: -10px;
+  margin-top: 0px;
+} */
+
 h2 {
   font-weight: 700 !important;
+  padding-top: 20px;
+}
+
+h3.text-center {
   padding-top: 30px;
 }
 
@@ -71,9 +113,26 @@ td.opal-header {
   height: 100px;
 }
 
+th {
+  width: 25%;
+}
+
 .text-left {
   width: 420px;
   margin: 10px;
+}
+
+.social {
+  height: 50px;
+  width: 50px;
+  margin-top: 50px;
+  opacity: 1;
+  -webkit-transition: opacity .2s;
+  transition: opacity .2s;
+}
+
+.social:hover {
+  opacity: .5;
 }
 
 .shadow-test {
@@ -109,4 +168,27 @@ td.opal-header {
 
 .shadow-test:hover::after {
   opacity: 1;
+}
+
+@media screen and (max-width: 500px) {
+  * {
+    font-family: "Catamaran", sans-serif;
+  }
+  h1 {
+    font-size: 50px !important;
+    text-align: center;
+  }
+  .opal-header h3 {
+    font-size: 20px !important;
+    text-align: center !important;
+  }
+  .isolate {
+    margin: 0px 0px 10px 0px !important;
+  }
+  th {
+    /* width: 40% !important; */
+    /* text-align: right !important; */
+    min-width: 32vw;
+  }
+  table .opal {}
 }
