--- a/opalescent.css
+++ b/opalescent.css
@@ -25,6 +25,7 @@ a:hover {
   max-width: 200px;
   color: white;
   font-size: 18px;
+  -webkit-border-radius: 5px;
   border-radius: 5px;
   opacity: 1;
   margin-bottom: 20px;
@@ -54,6 +55,7 @@ a:hover {
   width: 100%;
   max-width: 100%;
   min-height: 200px;
+  -webkit-border-radius: 0px;
   border-radius: 0px;
   /* color: #ffffffb0; */
   color: white;
@@ -160,6 +162,7 @@ a:hover {
   margin: 2px;
   height: calc(100% - 4px);
   width: calc(100% - 4px);
+  -webkit-border-radius: 3px;
   border-radius: 3px;
   background-color: #ffffff50;
   padding-top: 5px;
